objects/ssot__RecruitmentRequisitionLocation__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Recruitment Requisition Location Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecruitmentRequisitionId__c</fullName>
        <label>Recruitment Requisition</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1721371633425_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RecruitmentRequisitionLocation_Recru_rel</label>
        <referenceTo>ssot__RecruitmentRequisition__dlm</referenceTo>
        <relationshipLabel>RecruitmentRequisitionLocation_Recru_rel</relationshipLabel>
        <relationshipName>rel_1721371633425_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128942232_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RecruitmentRequisitionLocation_Locat_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>RecruitmentRequisitionLocation_Locat_rel</relationshipLabel>
        <relationshipName>rel_1723128942232_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>